--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ VITE_APP_NAME=PLA Web Submit
 VITE_APP_VERSION=1.0.0
 
 # API Configuration
-VITE_API_BASE_URL=http://localhost:3001
+VITE_API_BASE_URL=10.10.0.116:3888
 VITE_API_TIMEOUT=10000
 
 # Feature Flags
