add new structure on the project submit

--- a/src/assets/json/projects_data.json
+++ b/src/assets/json/projects_data.json
@@ -1,16 +1,15 @@
 [
     {
-        "name": "Coffee Rush"
+        "name": "Coffee Rush",
+        "project": "igame-coffee-rush"
     },
     {
-        "name": "Block Buster"
+        "name": "Block Buster",
+        "project": "igame-block-buster"
 
     },
     {
-        "name": "Royal Rescue"
-    },
-    {
-        "name": "Color Yarn 3D"
+        "name": "Royal Rescue",
+        "project": "igame-royal-rescue"
     }
-
 ]
