add project data

--- a/src/assets/json/projects_data.json
+++ b/src/assets/json/projects_data.json
@@ -131,5 +131,12 @@
     "slackChannelId": "C09CTQA3623"             ,
     "userList"      : "U049HQL0CSJ,U043LKSQSUE,U078BN1S7TL,U07GUV4KUJW" ,
     "cloudAddress"  : "\\\\192.168.10.100\\iKame\\iKame Games\\Marketing - Game\\Ad Asset - Game\\70_iG Skewer Jam\\2.Playable Ads"
+  },
+  {
+    "name": "iG Hotpot Go",
+    "projectId": "IGHG",
+    "slackChannelId": "C09K5HD0LU8",
+    "userList": "U043Q9MT5PF,U07LAAEAXFE,U09DK5SBGEB",
+    "cloudAddress": "\\192.168.10.100\\iKame\\iKame Games\\Marketing - Game\\Ad Asset - Game\\75_iG Hotpot Go\\2.Playable Ads"
   }
 ]
