add project data

--- a/src/assets/json/projects_data.json
+++ b/src/assets/json/projects_data.json
@@ -137,6 +137,6 @@
     "projectId": "IGHG",
     "slackChannelId": "C09K5HD0LU8",
     "userList": "U043Q9MT5PF,U07LAAEAXFE,U09DK5SBGEB",
-    "cloudAddress": "\\192.168.10.100\\iKame\\iKame Games\\Marketing - Game\\Ad Asset - Game\\75_iG Hotpot Go\\2.Playable Ads"
+    "cloudAddress": "\\\\192.168.10.100\\iKame\\iKame Games\\Marketing - Game\\Ad Asset - Game\\75_iG Hotpot Go\\2.Playable Ads"
   }
 ]
