update name project water factory

--- a/src/assets/json/projects_data.json
+++ b/src/assets/json/projects_data.json
@@ -140,7 +140,7 @@
     "cloudAddress": "\\\\192.168.10.100\\iKame\\iKame Games\\Marketing - Game\\Ad Asset - Game\\75_iG Hotpot Go\\2.Playable Ads"
   },
   {
-    "name"   : "igame-water-factory-creative"  ,
+    "name"   : "iG Water Factory"   ,
     "projectId"     : "iGWF"                        ,
     "slackChannelId": "C09FX70R683"                 ,
     "userList"      : "U049HQL0CSJ,U09DK5SBGEB, U043LKTH19U, U0445T1E325" ,
